Update fixed button image height and adjust navbar-collapse styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,16 +83,16 @@ padding: 12px 30px !important;
 border-radius: 50px !important; 
 } 
 /* --- NAVBAR SIGN IN BUTTON --- */
+
+/* Ensures the container moves to the right in Bootstrap navbar */
 .navbar-collapse {
     display: flex;
     align-items: center;
 }
-/* Ensures the container moves to the right in Bootstrap navbar */
-
 
 /* Specific styling for the button image */
 .fixed-btn-img {
-    height: 45px;            /* Set the fixed height */
+    height: 35px;            /* Set the fixed height */
     width: auto;             /* Keeps the image aspect ratio perfect */
     cursor: pointer;         /* Shows hand icon on hover */
     transition: transform 0.2s ease, opacity 0.2s ease; /* Smooth transition for hover effect */
@@ -629,6 +629,8 @@ margin-bottom: 30px;
 }
 
 .legal-text {
+      margin-left: 0;
+    text-align: center;
     font-size: 11px;
     line-height: 1.6;
     color: rgba(255, 255, 255, 0.4);
@@ -668,4 +670,3 @@ margin-bottom: 30px;
     color: white;
     text-decoration: underline;
 }
-
